# db-introspection

./: .env  .gitignore  Cargo.toml  docker-compose.yml
src/: column_types.rs  main.rs  table.rs
