[package]
name = "db-introspection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.28.0", features = ["macros"] }
